RESOLVED FIXED197590
[macOS] Fix programmatic scrolling with async overflow scroll
https://bugs.webkit.org/show_bug.cgi?id=197590
Summary [macOS] Fix programmatic scrolling with async overflow scroll
Simon Fraser (smfr)
Reported 2019-05-03 20:28:43 PDT
[macOS] Fix programmatic scrolling with async overflow scroll
Attachments
Patch (9.40 KB, patch)
2019-05-03 20:29 PDT, Simon Fraser (smfr)
no flags
Archive of layout-test-results from ews210 for win-future (13.96 MB, application/zip)
2019-05-03 21:35 PDT, EWS Watchlist
no flags
Simon Fraser (smfr)
Comment 1 2019-05-03 20:29:50 PDT
EWS Watchlist
Comment 2 2019-05-03 21:34:59 PDT
Comment on attachment 369038 [details] Patch Attachment 369038 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/12095760 New failing tests: security/contentSecurityPolicy/video-with-file-url-allowed-by-media-src-star-with-AllowContentSecurityPolicySourceStarToMatchAnyProtocol-enabled.html
EWS Watchlist
Comment 3 2019-05-03 21:35:02 PDT
Created attachment 369044 [details] Archive of layout-test-results from ews210 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews210 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
WebKit Commit Bot
Comment 4 2019-05-03 23:58:45 PDT
Comment on attachment 369038 [details] Patch Clearing flags on attachment: 369038 Committed r244947: <https://trac.webkit.org/changeset/244947>
WebKit Commit Bot
Comment 5 2019-05-03 23:58:47 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2019-05-03 23:59:24 PDT
Note You need to log in before you can comment on or make changes to this bug.