[macOS] Fix programmatic scrolling with async overflow scroll https://bugs.webkit.org/show_bug.cgi?id=197590

Reviewed by Sam Weinig.
Source/WebCore:

ScrollingTreeOverflowScrollingNodeMac needs to handle RequestedScrollPosition.

Tests: scrollingcoordinator/mac/programmatic-frame-scroll.html
       scrollingcoordinator/mac/programmatic-overflow-scroll.html

* page/scrolling/mac/ScrollingTreeOverflowScrollingNodeMac.mm:
(WebCore::ScrollingTreeOverflowScrollingNodeMac::commitStateAfterChildren):

LayoutTests:

Tests for programmatic scrolling of overflow and iframes.

* scrollingcoordinator/mac/programmatic-frame-scroll-expected.html: Added.
* scrollingcoordinator/mac/programmatic-frame-scroll.html: Added.
* scrollingcoordinator/mac/programmatic-overflow-scroll-expected.html: Added.
* scrollingcoordinator/mac/programmatic-overflow-scroll.html: Added.


Canonical link: https://commits.webkit.org/211736@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244947 268f45cc-cd09-0410-ab3c-d52691b4dbfc